--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="note_name">Название заметки</string>
     <string name="note_description">Текст заметки</string>
+    <string name="dateCreated">Дата создания:</string>
 </resources>
